@@ -231,6 +231,7 @@ isabelle.increase-font-size.shortcut2=C+ADD
 isabelle.increase-font-size.shortcut=C+PLUS
 isabelle.increase-font-size2.label=Increase font size (clone)
 isabelle.increase-font-size2.shortcut=C+EQUALS
+isabelle.jconsole.label=Java/VM Monitor
 isabelle.last-error.label=Go to last error
 isabelle.last-error.shortcut=CS+z
 isabelle.message.label=Show message
